# markdown-blog

./: .gitignore  .ignore  .rules  Cargo.toml  Dockerfile  README.md  Shuttle.toml  flake.nix  justfile  tarpaulin-report.html
.github/workflows/: notify_hanlho_blog.yml
assets/: blog_config.yaml
assets/static/css/: main.css
assets/templates/partials/: footer.html
benches/: blog_benchmarks.rs
content/: blog_config.yaml
docs/: prd.md
pages/: about.md
src/: blog_repository.rs  cache.rs  config.rs  lib.rs  main.rs  model.rs  renderer.rs
static/css/: main.css  syntax.css
temp/: .gitignore  Cargo.toml  flake.nix  shuttle.toml
temp/.github/workflows/: tests.yml
temp/src/: cache.rs  lib.rs  main.rs
temp/templates/: index.html  page.html
temp/tests/: integration_tests.rs
templates/: base.html  index.html  post.html
templates/partials/: footer.html  header.html  meta.html
tests/: integration_tests.rs
