[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
chrono = "0.4"
gray_matter = "0.2.6"
log = "0.4"
simple_logger = "4.2"
pulldown-cmark = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.19.0"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }

[dev-dependencies]
cargo-watch = "8.4.0"
criterion = "0.5"
reqwest = "0.11.22"
tempfile = "3.8.1"

[[bench]]
name = "blog_benchmarks"
harness = false
