[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["main"]
main = []
shuttle = ["dep:shuttle-runtime", "dep:shuttle-axum"]

[dependencies]
async-trait = "0.1.68"                                         # Async trait support
axum = "0.8.3"
chrono = "0.4"
gray_matter = "0.2.6"
log = "0.4"
simple_logger = "4.2"
pulldown-cmark = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.19.0"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }

# This dependencies fixed an SSL issue when running tests in Github actions.
# https://github.com/sfackler/rust-openssl/issues/2217
openssl = { version = "0.10.35", features = ["vendored"] }

# Optional Shuttle dependencies
shuttle-runtime = { version = "0.55.0", optional = true }
shuttle-axum = { version = "0.55.0", optional = true }

[dev-dependencies]
cargo-watch = "8.4.0"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = "0.11.22"
tempfile = "3.8.1"

[[bin]]
name = "blog-engine-main"
path = "src/bin/main.rs"

[[bin]]
name = "blog-engine"            # needs to be the same name as the main binary
path = "src/bin/shuttle.rs"
required-features = ["shuttle"]

[[bench]]
name = "blog_benchmarks"
harness = false
